Adding Tooltip on the Icon

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             <a class="smoothscroll" href="#about">start scrolling</a> and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
-               <li class="facebook"><a href="https://www.facebook.com/nathaniel1997"><i class="fa fa-facebook"></i></a></li>
-               <li class="linkedin"><a href="https://www.linkedin.com/in/john-dave/"><i class="fa fa-linkedin"></i></a></li>
-               <li class="github-square"><a href="https://github.com/nathaniel01997"><i class="fa fa-github"></i></a></li>
+               <li class="facebook tooltipFB"><a href="https://www.facebook.com/nathaniel1997"><span class="tooltipTextFB">Facebook</span><i class="fa fa-facebook"></i></a></li>
+               <li class="linkedin tooltipLI"><a href="https://www.linkedin.com/in/john-dave/"><span class="tooltipTextLI">LinkedIn</span><i class="fa fa-linkedin"></i></a></li>
+               <li class="github-square tooltipGit"><a href="https://github.com/nathaniel01997"><span class="tooltipTextGit">GitHub</span><i class="fa fa-github"></i></a></li>
                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
             </ul>
          </div>
       </div>
 
-      <p class="scrolldown">
-         <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
+      <p class="scrolldown tooltip">
+         <a class="smoothscroll" href="#about"><span class="tooltipText">About Me</span><i class="icon-down-circle"></i></a>
       </p>
 
    </header> <!-- Header End -->
@@ -284,6 +284,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>LifeSource</h5>
+                               <p>Web Site</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -297,6 +298,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Cashback API</h5>
+                               <p>Rest API</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -311,7 +313,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>UI</h5>
-                              <p>Webdesign</p>
+                              <p>Web Design Landing Page</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -325,7 +327,7 @@
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+                              <p>Web Design Landing Page</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -477,7 +479,7 @@
             </div>
 	      </div>modal-07 End -->
 
-         <div id="modal-08" class="popup-modal mfp-hide">
+         <!-- <div id="modal-08" class="popup-modal mfp-hide">
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-retrocam.jpg" alt="" />
 		      <div class="description-box">
 			      <h4>Retrocam</h4>
@@ -487,7 +489,7 @@
             <div class="link-box">
                <a href="http://www.behance.net" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 	      </div><!-- modal-01 End -->
       </div> <!-- row End -->
    </section> <!-- Portfolio Section End-->
